test: verify the behaviour of the handler